--- a/public/theme/admin/role-add.html
+++ b/public/theme/admin/role-add.html
@@ -4,7 +4,7 @@
 
 <!-- Mirrored from techzaa.getappui.com/larkon/admin/role-add.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 28 Sep 2024 14:06:16 GMT -->
 <head>
-<<<<<<< HEAD
+
      <!-- Title Meta -->
      <meta charset="utf-8" />
      <title>Role Add | Larkon - Responsive Admin Dashboard Template</title>
@@ -27,7 +27,7 @@
 
      <!-- Theme Config js (Require in all Page) -->
      <script src="assets/js/config.js"></script>
-=======
+
     <!-- Title Meta -->
     <meta charset="utf-8"/>
     <title>Role Add | Larkon - Responsive Admin Dashboard Template</title>
@@ -44,22 +44,22 @@
 
     <!-- Icons css (Require in all Page) -->
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css"/>
-
+W
     <!-- App css (Require in all Page) -->
     <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- Theme Config js (Require in all Page) -->
     <script src="assets/js/config.js"></script>
->>>>>>> d17a51d63ad1223aa572ebff2767f844dd72150f
+
 </head>
 
 <body>
 
-<<<<<<< HEAD
+
      <!-- START Wrapper -->
      <div class="wrapper">
 
-          <!-- ========== Topbar Start ========== -->
+          <!-- === Topbar Start === -->
           <header class="topbar">
                <div class="container-fluid">
                     <div class="navbar-header">
@@ -479,9 +479,9 @@
                     </div>
                </div>
           </div>
-          <!-- ========== Topbar End ========== -->
+          <!-- === Topbar End === -->
 
-          <!-- ========== App Menu Start ========== -->
+          <!-- === App Menu Start === -->
           <div class="main-nav">
                <!-- Sidebar Logo -->
                <div class="logo-box">
@@ -554,7 +554,7 @@
                                    <ul class="nav sub-navbar-nav">
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="category-list.html">List</a>
-                                        </li>                         
+                                        </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="category-edit.html">Edit</a>
                                         </li>
@@ -669,7 +669,7 @@
                                         </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="invoice-details.html">Details</a>
-                                        </li>                            
+                                        </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="invoice-add.html">Create</a>
                                         </li>
@@ -919,16 +919,16 @@
                                    <ul class="nav sub-navbar-nav">
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="auth-signin.html">Sign In</a>
-                                        </li>                              
+                                        </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="auth-signup.html">Sign Up</a>
-                                        </li>                           
+                                        </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="auth-password.html">Reset Password</a>
-                                        </li>                              
+                                        </li>
                                         <li class="sub-nav-item">
                                              <a class="sub-nav-link" href="auth-lock-screen.html">Lock Screen</a>
-                                        </li>                          
+                                        </li>
                                    </ul>
                               </div>
                          </li>
@@ -1265,11 +1265,11 @@
                     </ul>
                </div>
           </div>
-          <!-- ========== App Menu End ========== -->
+          <!-- === App Menu End === -->
 
-          <!-- ==================================================== -->
+          <!-- === -->
           <!-- Start right Content here -->
-          <!-- ==================================================== -->
+          <!-- === -->
           <div class="page-content">
 
                <!-- Start Container Fluid -->
@@ -1355,11 +1355,11 @@
                          </div>
                     </div>
 
-                    
+
                </div>
                <!-- End Container Fluid -->
 
-               <!-- ========== Footer Start ========== -->
+               <!-- === Footer Start === -->
                <footer class="footer">
                    <div class="container-fluid">
                        <div class="row">
@@ -1370,12 +1370,12 @@
                        </div>
                    </div>
                </footer>
-               <!-- ========== Footer End ========== -->
+               <!-- === Footer End === -->
 
           </div>
-          <!-- ==================================================== -->
+          <!-- === -->
           <!-- End Page Content -->
-          <!-- ==================================================== -->
+          <!-- === -->
 
      </div>
      <!-- END Wrapper -->
@@ -1385,11 +1385,11 @@
 
      <!-- App Javascript (Require in all Page) -->
      <script src="assets/js/app.js"></script>
-=======
+
 <!-- START Wrapper -->
 <div class="wrapper">
 
-    <!-- ========== Topbar Start ========== -->
+    <!-- === Topbar Start === -->
     <header class="topbar">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -1887,9 +1887,9 @@
             </div>
         </div>
     </div>
-    <!-- ========== Topbar End ========== -->
+    <!-- === Topbar End === -->
 
-    <!-- ========== App Menu Start ========== -->
+    <!-- === App Menu Start === -->
     <div class="main-nav">
         <!-- Sidebar Logo -->
         <div class="logo-box">
@@ -2696,11 +2696,11 @@
             </ul>
         </div>
     </div>
-    <!-- ========== App Menu End ========== -->
+    <!-- === App Menu End === -->
 
-    <!-- ==================================================== -->
+    <!-- === -->
     <!-- Start right Content here -->
-    <!-- ==================================================== -->
+    <!-- === -->
     <div class="page-content">
 
         <!-- Start Container Fluid -->
@@ -2795,7 +2795,7 @@
         </div>
         <!-- End Container Fluid -->
 
-        <!-- ========== Footer Start ========== -->
+        <!-- === Footer Start === -->
         <footer class="footer">
             <div class="container-fluid">
                 <div class="row">
@@ -2809,12 +2809,12 @@
                 </div>
             </div>
         </footer>
-        <!-- ========== Footer End ========== -->
+        <!-- === Footer End === -->
 
     </div>
-    <!-- ==================================================== -->
+    <!-- === -->
     <!-- End Page Content -->
-    <!-- ==================================================== -->
+    <!-- === -->
 
 </div>
 <!-- END Wrapper -->
@@ -2824,14 +2824,14 @@
 
 <!-- App Javascript (Require in all Page) -->
 <script src="assets/js/app.js"></script>
->>>>>>> d17a51d63ad1223aa572ebff2767f844dd72150f
+
 
 </body>
 
 
 <!-- Mirrored from techzaa.getappui.com/larkon/admin/role-add.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 28 Sep 2024 14:06:16 GMT -->
-<<<<<<< HEAD
+
 </html>
-=======
+
 </html>
->>>>>>> d17a51d63ad1223aa572ebff2767f844dd72150f
+
